# relate_lib

./: CMakeLists.txt  LICENSE  README.md
example/: convert.sh  example.equiv.mut  example.equiv.mut.map  example.sh  load.py  output.mut  output.topo.trees
example/data/: example.poplabels
include/convert/: CMakeLists.txt  Convert.cpp
include/example/: .Example.cpp.swo  CMakeLists.txt  Example.cpp  Example.cpp~
include/introgression/: CMakeLists.txt  GetEquivalentBranches.cpp  Introgression.cpp
include/src/: .anc_builder.hpp.swp  .tree_sequence.hpp.swo  CMakeLists.txt  anc.cpp  anc.hpp  data.cpp  data.hpp  mutations.cpp  mutations.cpp~  mutations.hpp  mutations.hpp~  sample.cpp  sample.hpp  tree_sequence.hpp  tree_sequence.hpp~
include/src/gzstream/: CMakeCache.txt  Makefile  cmake_install.cmake  gzstream.hpp~
include/src/tskit/: CMakeLists.txt  tskit.h
include/test/: CMakeLists.txt  Tests.cpp  catch_amalgamated.cpp  test_relate_lib.cpp
python/: add-constrained-node-ages.py  compare-constrained-vs-unconstrained.py  requirements.txt
